clusters/rainbow/apps/prowlarr/istio-config.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prowlarr
  namespace: vpn
spec:
  hosts:
  - "prowlarr.tuckerthomas.com"
  gateways:
  - istio-ingress/vpn-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9696
        host: prowlarr.vpn.svc.cluster.local
