clusters/rainbow/apps/prowlarr/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: apps

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: prowlarr
          namespace: apps
          port: 9696

  tls:
    secretName: apps-cert-prod
    domains:
      - main: prowlarr.tuckerthomas.com
